--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "@tiptap/vue-3": "^2.11.7",
+    "@vueuse/core": "^13.1.0",
     "bcrypt": "^5.1.1",
     "formidable": "^3.5.3",
     "jsonwebtoken": "^9.0.2",
